--- a/uncompiled_scss/styles/_text.scss
+++ b/uncompiled_scss/styles/_text.scss
@@ -23,6 +23,14 @@
   }
 }
 
+.title-black{
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  font-family: "Futura PT Demi";
+  color: #000000;
+}
+
 .big-description {
   font-family: 'Futura PT Book', 'sans-serif';
   font-size: 25px;
