--- a/uncompiled_scss/styles/_header.scss
+++ b/uncompiled_scss/styles/_header.scss
@@ -1,5 +1,27 @@
 .header-box {
   position: relative;
+  .navigation-menu{
+    display: inline-flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+    position: relative;
+    margin-top: 20px;
+    .menu-item{
+      margin-right: 13%;
+      list-style: none;
+      .menu-link{
+        text-decoration: none;
+        font-size: 18px;
+        line-height: 23px;
+        font-family: "Futura PT Demi";
+        color: #000000;
+        text-transform: uppercase;
+      }
+    }
+  }
   .title-steps{
     display: none;
   }
