--- a/uncompiled_scss/styles/_photo_card.scss
+++ b/uncompiled_scss/styles/_photo_card.scss
@@ -16,11 +16,10 @@
       position: absolute;
       bottom: 80px;
       left: 20px;
+      width: 30px;
+      height: 30px;
+      background-size: contain;
       filter: brightness(0) invert(1);
-      &.right {
-        margin-left: 120px;
-      }
-
     }
     .photo-description {
       padding-left: 20px;
@@ -34,7 +33,7 @@
         color: #fff;
       }
       .description {
-        font-size: 10px;
+        font-size: 15px;
         line-height: 13px;
         color: #fff;
         width: 100px;
@@ -135,6 +134,19 @@
     grid-column-gap: 1em;
     grid-row-gap: 1em;
     .photo {
+      .arrow {
+        position: absolute;
+        bottom: 80px;
+        left: 20px;
+        width: 50px;
+        height: 50px;
+        background-size: contain;
+        filter: brightness(0) invert(1);
+        &.right {
+          margin-left: 120px;
+        }
+
+      }
       .display-sm-none{
         display: block;
       }
