--- a/uncompiled_scss/styles/_profile_info.scss
+++ b/uncompiled_scss/styles/_profile_info.scss
@@ -1,53 +1,227 @@
 .left-block {
   position: absolute;
   left: 0;
-  top: 200px;
+  top: 180px;
+  .menu-list {
+    margin-left: 20px;
+    margin-top: 30px;
+    display: block;
+  }
+  .second{
+    margin-top: 40px;
+    position: relative;
+    &::after{
+      content: "";
+      display: inline-block;
+      position: absolute;
+      width: 130px;
+      height: 2px;
+      bottom: -30px;
+      left: 0;
+      background: $color-red;
+    }
+  }
+  .button-block{
+    margin-top: 40px;
+    margin-bottom: 30px;
+    position: relative;
+    &::after{
+      content: "";
+      display: inline-block;
+      position: absolute;
+      width: 130px;
+      height: 2px;
+      top: -20px;
+      left: 0;
+      background: $color-red;
+    }
+  }
+  .socials{
+    margin-left: 0;
+  }
+  .link-block{
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  .title {
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+
+  }
+  .block {
+    margin-left: 20px;
+  }
+  .contacts-block {
+    margin-top: 40px;
+    margin-bottom: 30px;
+    .description {
+      font-size: 12px;
+      line-height: 12px;
+    }
+    .title {
+      margin-bottom: 50px;
+    }
+  }
+  .contacts-block-info {
+    position: relative;
+    margin-bottom: 60px;
+    .title {
+      margin-bottom: 10px;
+    }
+    .description{
+      font-size: 12px;
+      line-height: 12px;
+    }
+  }
+  .socials {
+    position: relative;
+  }
 }
 
-.right-block{
-  position: absolute;
-  right: 80px;
-  top: 200px;
-  .menu-list{
-    margin: 0;
-    padding: 0;
-    border-bottom: 1px solid black;
-    .list-item{
-      list-style: none;
-      margin-bottom: 20px;
-      a{
-        text-decoration: none;
-        color: #000000;
-        font-size: 18px;
-        line-height: 23px;
-        text-transform: uppercase;
-      }
+.button-border {
+  font-family: "Futura PT Demi";
+  background: transparent;
+  color: $color-black;
+  border: 1px solid black;
+  text-align: left;
+  font-size: 9px;
+  line-height: 12px;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 25px 20px 10px;
+  display: block;
+  margin-bottom: 20px;
+}
+
+.right-block {
+  display: none;
+  position: relative;
+  right: 0;
+  top: 180px;
+  .title {
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+  }
+  .link-block {
+    margin: 35px 0;
+  }
+}
+
+.link-views {
+  display: inline-flex;
+  .description {
+    font-size: 12px;
+    line-height: 12px;
+    margin-left: 20px;
+  }
+}
+
+.menu-list {
+  margin: 0;
+  padding: 0;
+  .list-item {
+    list-style: none;
+    margin-bottom: 20px;
+    font-family: "Futura PT Demi";
+
+    a {
+      text-decoration: none;
+      color: #000000;
+      font-size: 12px;
+      line-height: 15px;
+      text-transform: uppercase;
     }
   }
 }
-.profile-info{
-  .big-title{
-    font-size: 21px;
-    line-height: 27px;
+
+.profile-info {
+  padding-left: 40%;
+  position: relative;
+  &:last-child{
+    margin-bottom: 115px;
+  }
+  .audio-block {
+    margin-bottom: 60px;
+    .img-block {
+      margin-top: 20px;
+    }
+  }
+  .edit-img {
+    position: absolute;
+    right: 30%;
+    margin-top: 30px;
+  }
+  .photo-card {
+    margin-bottom: 50px;
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+    grid-template-rows: repeat(1, 300px);
+    .photo-1 {
+      grid-column: 1/5;
+      grid-row: 1/2;
+    }
+    .photo-2 {
+      grid-column: 5/9;
+      grid-row: 1/2;
+    }
+    .photo-3 {
+      grid-column: 1/5;
+      grid-row: 3/4;
+    }
+    .photo-4 {
+      grid-column: 5/9;
+      grid-row: 3/4;
+    }
+    .photo-5 {
+      grid-column: 1/5;
+      grid-row: 4/5;
+    }
+    .photo-6 {
+      grid-column: 5/9;
+      grid-row: 4/5;
+    }
+    .photo-7 {
+      grid-column: 1/5;
+      grid-row: 5/6;
+    }
+    .photo-8 {
+      grid-column: 5/9;
+      grid-row: 5/6;
+    }
+  }
+
+  .big-title {
+    font-size: 12px;
+    line-height: 15px;
     letter-spacing: 0;
   }
-  .description{
-    font-family: $futura_pt_demi;
-    font-size: 18px;
-    line-height: 23px;
+  .description-bold {
+    font-family: "Futura PT Demi";
+    font-size: 10px;
+    line-height: 13px;
     font-weight: normal;
+  }
+  .description {
+    font-family: "Futura PT Medium";
+    font-size: 15px;
+    line-height: 13px;
 
     color: #000000;
-    &.bold{
+    &.bold {
       font-weight: bold;
     }
   }
-  .bold{
+  .bold {
     font-weight: bold;
   }
 }
-.about-user{
-  font-family: "Futura PT Demi";
+
+.about-user {
+  font-family: "Futura PT Book";
   font-size: 18px;
   line-height: 23px;
   font-weight: normal;
@@ -57,17 +231,73 @@
   color: #000000;
 }
 
-
-@include desktop{
-  .profile-info{
-    padding-left: 30%;
-    .description{
-
+@include desktop {
+  .right-block {
+    display: block;
+    position: absolute;
+    .title {
+      font-size: 18px;
+      line-height: 23px;
     }
+    .link-views {
+      display: inline-flex;
+      .description {
+        font-size: 18px;
+        line-height: 23px;
+        margin-left: 20px;
+      }
+    }
+    .menu-list {
+      .list-item {
+        a {
+          font-size: 18px;
+          line-height: 23px;
+        }
+      }
+    }
+  }
+  .button-block{
+    display: none;
+  }
+  .block{
+    margin-left: 50px;
 
   }
-  .about-user{
-
+  .left-block {
+    .link-views {
+      display: none;
+      .description {
+        margin-left: 20px;
+      }
+    }
+    .second{
+      display: none;
+    }
+    .title {
+      font-size: 18px;
+      line-height: 23px;
+    }
+    .menu-list {
+      display: none;
+    }
   }
-
+  .button-border {
+    font-size: 18px;
+    line-height: 23px;
+  }
+  .profile-info {
+    padding-left: 30%;
+    .big-title {
+      font-size: 21px;
+      line-height: 27px;
+    }
+    .description-bold {
+      font-size: 18px;
+      line-height: 23px;
+    }
+    .description {
+      font-size: 18px;
+      line-height: 23px;
+    }
+  }
 }
