--- a/uncompiled_scss/styles/_wizard.scss
+++ b/uncompiled_scss/styles/_wizard.scss
@@ -10,7 +10,17 @@
   .steps {
     display: none;
     padding-bottom: 20px;
-    border-bottom: 2px solid #000000;
+    position: relative;
+    &::after{
+      content: "";
+      display: inline-block;
+      position: absolute;
+      width: 200px;
+      height: 2px;
+      bottom: -20px;
+      right: 15px;
+      background: $color-black;
+    }
     li {
       margin-bottom: 16px;
       display: flex;
