--- a/uncompiled_scss/styles/_locations.scss
+++ b/uncompiled_scss/styles/_locations.scss
@@ -1,6 +1,8 @@
 .locations-box{
-  .title{
-    text-transform: capitalize;
+  margin-top: 70px;
+  margin-bottom: 20%;
+  .big-title{
+    margin-bottom: 100px;
   }
 }
 .locations {
@@ -16,6 +18,8 @@
   }
 
   .loc-right {
+    float: right;
+    margin-right: 130px;
     margin-left: 50px;
     padding-left: 20px;
     border-left: 1px solid red;
@@ -42,24 +46,41 @@
     background: url("../images/location-arrow.svg") center no-repeat;
     background-size: contain;
 
-    top: 395px;
+    top: 396px;
     z-index: 10;
     cursor: pointer;
   }
 
   .prev-loc {
-    left: 40px;
+    left: 0;
     transform: rotate(180deg);
   }
 
   .next-loc {
-    right: 40px;
+    right: 0;
   }
 }
 
 @include desktop{
+  .loc-controls{
+    .prev-loc,
+    .next-loc {
+      top: 346px;
+    }
+    .prev-loc {
+      left: 40px;
+      transform: rotate(180deg);
+    }
+
+    .next-loc {
+      right: 40px;
+    }
+  }
   .locations {
     margin: auto;
+    .loc-right{
+      float: none;
+    }
     .loc-left {
       padding-left: 100px;
       padding-right: 50px;
