--- a/uncompiled_scss/styles/_forms.scss
+++ b/uncompiled_scss/styles/_forms.scss
@@ -58,35 +58,58 @@
 
   }
 
-  .photo-section {
+  .photo-section-bottom {
+    display: flex;
+    flex-wrap: wrap;
 
-    &.top {
-      border-bottom: 1px solid #777777;
-    }
     .photo-block {
-      padding: 20px 0;
+      flex-basis: 24%;
+      padding: 0;
+      margin-bottom: 20px;
       &.border {
         border: 1px solid black;
         padding: 10px 40px 155px 40px;
       }
       &.text {
+        flex-basis: 35%;
         font-size: 15px;
         line-height: 19px;
+
         color: #777777;
       }
       &.image {
         flex-basis: 20%;
-        max-height: 0;
-        margin-left: 30px;
+        max-height: 150px;
+        margin-right: 30px;
         .arrow {
           margin-bottom: -74px;
           margin-left: 50px;
         }
         .big-vector {
           border: 1px solid black;
-          padding: 40px 50px 0 50px;
+          padding: 40px 52px 0 52px;
         }
       }
+    }
+
+  }
+  .photo-section {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    &.top {
+      border-bottom: 1px solid #777777;
+    }
+    .photo-block {
+      flex-basis: 24%;
+      padding: 0 15px;
+      .description{
+        width: 60%;
+        float: right;
+        font-size: 15px;
+        line-height: 13px;
+      }
+
       .title-photo {
         text-transform: uppercase;
         font-weight: 100;
@@ -98,10 +121,10 @@
         display: block;
         border: 2px solid black;
         padding: 4px 2px;
+        float: right;
       }
     }
   }
-
   .work-blocks {
     display: inline-block;
     margin-right: 30px;
@@ -118,7 +141,7 @@
       line-height: 19px;
       color: #777777;
     }
-    .description{
+    .description {
       font-size: 14px;
       line-height: 15px;
     }
@@ -155,7 +178,7 @@
     margin-left: 10px;
     margin-bottom: 20px;
   }
-  .add-title{
+  .add-title {
     text-transform: lowercase;
     display: inline-block;
     font-size: 12px;
@@ -163,7 +186,7 @@
     color: $color-red;
   }
 
-  @include tablet{
+  @include tablet {
     .work-input {
       display: inline-flex;
       flex-direction: row;
@@ -175,7 +198,7 @@
         line-height: 19px;
         color: #777777;
       }
-      .description{
+      .description {
         font-size: 14px;
         line-height: 15px;
       }
@@ -209,7 +232,6 @@
       }
     }
   }
-
 
   @include desktop {
     .title {
@@ -257,7 +279,7 @@
       }
     }
 
-    .add-title{
+    .add-title {
       text-transform: uppercase;
       font-size: 18px;
       line-height: 23px;
@@ -265,25 +287,33 @@
     .photo-section {
       display: flex;
       flex-wrap: wrap;
+      flex-direction: row;
       &.top {
         border-bottom: 1px solid #777777;
       }
       .photo-block {
         flex-basis: 24%;
         padding: 0 15px;
+        .description{
+          float: none;
+          font-size: 16px;
+          line-height: 14px;
+
+        }
         &.border {
           border: 1px solid black;
           padding: 10px 40px 155px 40px;
         }
         &.text {
+          flex-basis: 35%;
           font-size: 15px;
           line-height: 19px;
+
           color: #777777;
         }
         &.image {
           flex-basis: 20%;
           max-height: 150px;
-          margin-left: 0;
           margin-right: 30px;
           .arrow {
             margin-bottom: -74px;
@@ -305,6 +335,7 @@
           display: block;
           border: 2px solid black;
           padding: 4px 2px;
+          float: none;
         }
       }
     }
