--- a/uncompiled_scss/styles/_profile_info.scss
+++ b/uncompiled_scss/styles/_profile_info.scss
@@ -1,3 +1,4 @@
+
 .left-block {
   position: absolute;
   left: 0;
@@ -7,10 +8,10 @@
     margin-top: 30px;
     display: block;
   }
-  .second{
+  .second {
     margin-top: 40px;
     position: relative;
-    &::after{
+    &::after {
       content: "";
       display: inline-block;
       position: absolute;
@@ -21,11 +22,11 @@
       background: $color-red;
     }
   }
-  .button-block{
+  .button-block {
     margin-top: 40px;
     margin-bottom: 30px;
     position: relative;
-    &::after{
+    &::after {
       content: "";
       display: inline-block;
       position: absolute;
@@ -36,10 +37,10 @@
       background: $color-red;
     }
   }
-  .socials{
+  .socials {
     margin-left: 0;
   }
-  .link-block{
+  .link-block {
     margin-top: 20px;
     margin-left: 20px;
   }
@@ -70,7 +71,7 @@
     .title {
       margin-bottom: 10px;
     }
-    .description{
+    .description {
       font-size: 12px;
       line-height: 12px;
     }
@@ -100,6 +101,9 @@
   position: relative;
   right: 0;
   top: 180px;
+  .moderation{
+    margin-top: 70px;
+  }
   .title {
     font-size: 12px;
     line-height: 15px;
@@ -127,6 +131,7 @@
     list-style: none;
     margin-bottom: 20px;
     font-family: "Futura PT Demi";
+    cursor: pointer;
 
     a {
       text-decoration: none;
@@ -139,9 +144,12 @@
 }
 
 .profile-info {
-  padding-left: 40%;
+  padding-left: 55%;
   position: relative;
-  &:last-child{
+  .rating{
+    float: right;
+  }
+  &:last-child {
     margin-bottom: 115px;
   }
   .audio-block {
@@ -152,14 +160,14 @@
   }
   .edit-img {
     position: absolute;
-    right: 30%;
+    right: 10%;
     margin-top: 30px;
   }
   .photo-card {
     margin-bottom: 50px;
     grid-column-gap: 1em;
     grid-row-gap: 1em;
-    grid-template-rows: repeat(1, 300px);
+    grid-template-rows: repeat(1, 200px);
     .photo-1 {
       grid-column: 1/5;
       grid-row: 1/2;
@@ -231,13 +239,82 @@
   color: #000000;
 }
 
+@include tablet {
+  .profile-info {
+    padding-left: 45%;
+    position: relative;
+    .photo-card {
+      margin-bottom: 50px;
+      grid-column-gap: 1em;
+      grid-row-gap: 1em;
+      grid-template-rows: repeat(1, 220px);
+      .photo-1 {
+        grid-column: 1/5;
+        grid-row: 1/2;
+      }
+      .photo-2 {
+        grid-column: 5/9;
+        grid-row: 1/2;
+      }
+      .photo-3 {
+        grid-column: 1/5;
+        grid-row: 3/4;
+      }
+      .photo-4 {
+        grid-column: 5/9;
+        grid-row: 3/4;
+      }
+      .photo-5 {
+        grid-column: 1/5;
+        grid-row: 4/5;
+      }
+      .photo-6 {
+        grid-column: 5/9;
+        grid-row: 4/5;
+      }
+      .photo-7 {
+        grid-column: 1/5;
+        grid-row: 5/6;
+      }
+      .photo-8 {
+        grid-column: 5/9;
+        grid-row: 5/6;
+      }
+    }
+
+  }
+}
+
 @include desktop {
   .right-block {
-    display: block;
+    display: inline-block;
     position: absolute;
+    .socials {
+      position: relative;
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        width: 90%;
+        height: 2px;
+        bottom: -30px;
+        left: 0;
+        background: $color-black;
+      }
+    }
     .title {
       font-size: 18px;
       line-height: 23px;
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        width: 300px;
+        height: 2px;
+        bottom: -30px;
+        left: -15px;
+        background: $color-red;
+      }
     }
     .link-views {
       display: inline-flex;
@@ -248,7 +325,20 @@
       }
     }
     .menu-list {
+      position: relative;
+      &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: -30px;
+        left: 0;
+        background: $color-black;
+      }
+
       .list-item {
+        cursor: pointer;
         a {
           font-size: 18px;
           line-height: 23px;
@@ -256,10 +346,10 @@
       }
     }
   }
-  .button-block{
+  .button-block {
     display: none;
   }
-  .block{
+  .block {
     margin-left: 50px;
 
   }
@@ -270,7 +360,7 @@
         margin-left: 20px;
       }
     }
-    .second{
+    .second {
       display: none;
     }
     .title {
@@ -284,9 +374,61 @@
   .button-border {
     font-size: 18px;
     line-height: 23px;
+    cursor: pointer;
+
+  }
+  .edit-img {
+    position: absolute;
+    right: 30%;
+    margin-top: 30px;
+    cursor: pointer;
   }
   .profile-info {
     padding-left: 30%;
+    .edit-img {
+      position: absolute;
+      right: 30%;
+      margin-top: 30px;
+    }
+    .photo-card {
+      margin-bottom: 50px;
+      grid-column-gap: 1em;
+      grid-row-gap: 1em;
+      grid-template-rows: repeat(1, 300px);
+      .photo-1 {
+        grid-column: 1/5;
+        grid-row: 1/2;
+      }
+      .photo-2 {
+        grid-column: 5/9;
+        grid-row: 1/2;
+      }
+      .photo-3 {
+        grid-column: 1/5;
+        grid-row: 3/4;
+      }
+      .photo-4 {
+        grid-column: 5/9;
+        grid-row: 3/4;
+      }
+      .photo-5 {
+        grid-column: 1/5;
+        grid-row: 4/5;
+      }
+      .photo-6 {
+        grid-column: 5/9;
+        grid-row: 4/5;
+      }
+      .photo-7 {
+        grid-column: 1/5;
+        grid-row: 5/6;
+      }
+      .photo-8 {
+        grid-column: 5/9;
+        grid-row: 5/6;
+      }
+    }
+
     .big-title {
       font-size: 21px;
       line-height: 27px;
